[project]
name = "datapipelines-for-cisco-networks"
version = "0.1.0"
description = ""
authors = [
    {name = "flopach"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dagster (>=1.10.1,<2.0.0)",
    "dagster-webserver (>=1.10.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
